@@ -1,27 +1,23 @@
 package com.mraof.minestuck.alchemy;
 
-
 import com.mraof.minestuck.Minestuck;
 import com.mraof.minestuck.util.MSNBTUtil;
 import net.minecraft.Util;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
-import net.minecraftforge.registries.ForgeRegistryEntry;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.*;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-
-public class GristType extends ForgeRegistryEntry<GristType> implements Comparable<GristType>
+public class GristType implements Comparable<GristType>
 {
 	private static final Logger LOGGER = LogManager.getLogger();
 	private static final ResourceLocation DUMMY_ICON_LOCATION = new ResourceLocation(Minestuck.MOD_ID, "textures/grist/dummy.png");
@@ -45,12 +41,12 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 	
 	public Component getNameWithSuffix()
 	{
-		return new TranslatableComponent(FORMAT, getDisplayName());
+		return Component.translatable(FORMAT, getDisplayName());
 	}
 	
-	public Component getDisplayName()
+	public MutableComponent getDisplayName()
 	{
-		return new TranslatableComponent(getTranslationKey());
+		return Component.translatable(getTranslationKey());
 	}
 	
 	/**
@@ -119,7 +115,7 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 	public List<GristType> getSecondaryTypes()
 	{
 		return Objects.requireNonNull(GristTypes.getRegistry().tags())
-				.getTag(this.getSecondaryTypesTag()).stream().collect(Collectors.toList());
+				.getTag(this.getSecondaryTypesTag()).stream().toList();
 	}
 	
 	public TagKey<GristType> getSecondaryTypesTag()
@@ -148,7 +144,7 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 	@Override
 	public String toString()
 	{
-		return String.valueOf(getRegistryName());
+		return String.valueOf(GristTypes.getRegistry().getKey(this));
 	}
 	
 	@Override
@@ -158,13 +154,13 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 			return -1;
 		else if(this.rarity < gristType.rarity)
 			return 1;
-		else return Objects.requireNonNull(this.getRegistryName()).getPath()
-					.compareTo(Objects.requireNonNull(gristType.getRegistryName()).getPath());
+		else return Objects.requireNonNull(GristTypes.getRegistry().getKey(this)).getPath()
+					.compareTo(Objects.requireNonNull(GristTypes.getRegistry().getKey(gristType)).getPath());
 	}
 	
 	public final void write(CompoundTag nbt, String key)
 	{
-		ResourceLocation name = this.getRegistryName();
+		ResourceLocation name = GristTypes.getRegistry().getKey(this);
 		if(name == null)
 			LOGGER.error("Trying to save grist type {} that is lacking a registry name!", this);
 		else MSNBTUtil.writeResourceLocation(nbt, key, name);
